--- a/Kompliant/healthandsafety.html
+++ b/Kompliant/healthandsafety.html
@@ -286,16 +286,12 @@
             </div>
             <!-- /.navbar-static-side -->
         </nav>
-        <div id="page-wrapper">
+        <div id="page-wrapper" ng-controller="requirementsController">
             <div class="row">
                 <div class="col-lg-12">
                     <h1 class="page-header">Health & Safety</h1>
                 </div>
                 <!-- /.col-lg-12 -->
-            </div>
-            <!-- /.row -->
-            <div class="row">
-
             </div>
             <!-- /.row -->
             <div class="row">
@@ -333,42 +329,18 @@
                                 <table class="table table-striped table-bordered table-hover" id="dataTables-example">
                                     <thead>
                                         <tr>
+                                            <th>Requirement Id</th>
                                             <th>Related Standard</th>
-                                            <th>Activity</th>
-                                            <th>Date of Last Occurance</th>
-                                            <th>Document Source</th>
+                                            <th>Description</th>
+                                            <th>Period</th>
                                         </tr>
                                     </thead>
-                                    <tbody>
+                                    <tbody ng-repeat="requirement in requirements">
                                         <tr class="odd gradeX">
-                                            <td>CARF 1.H.4</td>
-                                            <td>Personnel receive training in health and safety practices, identification of unsafe environmental factors, emergency and evacuation procedures, identification and reporting of critical incidents, reducing physical risks, and medication management, if appropriate</td>
-                                            <td>1/10/2014</td>
-                                            <td class="center">MainFiles</td>
-                                        </tr>
-                                        <tr class="odd gradeX">
-                                            <td>CARF 1.H.7</td>
-                                            <td>Unannounced tests of all emergency procedures, including complete actual or simulated physical evacuation drills, tested on each shift at all locations</td>
-                                            <td>4/22/2014</td>
-                                            <td class="center">MainFiles</td>
-                                        </tr>
-                                        <tr class="odd gradeX">
-                                            <td>CARF 1.H.10</td>
-                                            <td>Critical incidents are reviewed, resulting in a written analysis provided to or conducted by leadership</td>
-                                            <td>3/1/2014</td>
-                                            <td class="center">Online</td>
-                                        </tr>
-                                        <tr class="odd gradeX">
-                                            <td>CARF 1.H.12.(1)</td>
-                                            <td>If transportation services are contracted, the contract is reviewed against Standard 1.H.12.a.–k.</td>
-                                            <td>6/15/2014</td>
-                                            <td class="center">Online</td>
-                                        </tr>
-                                        <tr class="odd gradeX">
-                                            <td>CARF 1.H.13</td>
-                                            <td>Comprehensive external health and safety inspection conducted at all facilities where the organization delivers services or provides administration on a regular and consistent basis, resulting in a written report</td>
-                                            <td>10/4/2014</td>
-                                            <td class="center">Online</td>
+                                            <td>{{ requirement.requirementId }}</td>
+                                            <td>{{ requirement.standardId }}</td>
+                                            <td>{{ requirement.description }}</td>
+                                            <td>{{ requirement.period }}</td>
                                         </tr>
                                     </tbody>
                                 </table>
@@ -531,5 +503,7 @@
     <script src="Scripts/plugins/morris/morris-data.js"></script>
     <script src="Scripts/sb-admin-2.js"></script>
     <script src="KompliantApp/kompliantApp.js"></script>
+    <script src="KompliantApp/controllers/requirementsController.js"></script>
+    <script src="KompliantApp/services/requirementService.js"></script>
 </body>
 </html>
